--- a/src/main/webapp/WEB-INF/thymeleaf/welcome.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/welcome.html
@@ -25,7 +25,7 @@
                 <tr>
                     <td><a href="welcome.html">Home</a></td>
                     <td style="float: right;" ><img src="../../images/springsource-logo.png" 
-                        alt="Sponsored by SpringSource"></img></td>
+                        alt="Sponsored by SpringSource" /></td>
                 </tr>
             </table>
         </div>
