Several changes made
git-svn-id: https://thymeleaf.svn.sourceforge.net/svnroot/thymeleaf/trunk/thymeleafexamples-petclinic@1363 18283e39-483d-46e1-a5f2-92434bed4d7e

--- a/src/main/webapp/WEB-INF/thymeleaf/owners/list.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/owners/list.html
@@ -22,7 +22,7 @@
                     <tr th:each="owner : ${selections}">
                         <td>
                             <a th:href="@{'/owners/' + ${owner.id}}" href="show.html" 
-                               th:text="${owner.firstName + owner.lastName}">Mary Smith</a>
+                               th:text="${owner.firstName + ' ' + owner.lastName}">Mary Smith</a>
                         </td>
                         <td th:text="${owner.address}">45, Oxford Street</td>
                         <td th:text="${owner.city}">Cambridge</td>
