Thymeleaf version of pages modified

--- a/src/main/webapp/WEB-INF/thymeleaf/pets/createOrUpdateVisitForm.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/pets/createOrUpdateVisitForm.html
@@ -34,7 +34,7 @@
         </tr>
     </table>
 
-    <form th:object="${visit}" th:action="@{${#httpServletRequest.servletPath}}">
+    <form th:object="${visit}" th:action="@{${#httpServletRequest.servletPath}}" method="post">
         <div class="control-group">
             <label class="control-label">Date </label>
 
