Minor style fix.

--- a/src/main/webapp/WEB-INF/thymeleaf/owners/ownersList.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/owners/ownersList.html
@@ -94,7 +94,7 @@
                 <td th:text="${owner.telephone}">555-555-555</td>
                 <td>
                     <span th:each="pet : ${owner.pets}" th:text="${pet.name}" th:remove="tag">
-                       Rob
+                       Rob&nbsp;
                     </span>
                 </td>
             </tr>
