--- a/src/main/webapp/WEB-INF/thymeleaf/vets/vetList.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/vets/vetList.html
@@ -44,7 +44,7 @@
 
     <h2>Veterinarians</h2>
 
-    <table class="table table-stripped" style="width:600px;">
+    <table id="vets" dt:table="true" dt:cdn="true" class="table table-striped" dt:theme="bootstrap2" dt:paginate="false" dt:info="false">
         <thead>
         <tr>
             <th>Name</th>
