--- a/src/main/webapp/WEB-INF/thymeleaf/index.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/index.html
@@ -14,8 +14,13 @@
             th:src="@{/resources/lib/underscore-1.1.6.js}"></script>
     <script src="../../resources/lib/backbone-0.5.3.js"
             th:src="@{/resources/lib/backbone-0.5.3.js}"></script>
+    
+	<script src="../../resources/templates/load.js"
+            th:src="@{/resources/templates/load.js}"></script>            
+
     <script src="../../resources/todos.js"
             th:src="@{/resources/todos.js}"></script>
+            
   </head>
 
   <body>
@@ -53,41 +58,6 @@
       BackboneJS exemple application created by <a href="http://jgn.me/">J&eacute;r&ocirc;me Gravel-Niquet</a><br />
       Spring 3.1 backend created by <a href="http://twitter.com/sdeleuze">S&eacute;bastien Deleuze</a>
     </div>
-
-    <!-- Templates -->
-	<script type="text/template" id="item-template" th:inline="javascript">
-	/*<![CDATA[*/
-      <div class="todo <%= done ? 'done' : '' %>">
-        <div class="display">
-          <input class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
-          <div class="todo-content"></div>
-          <span class="todo-destroy"></span>
-        </div>
-        <div class="edit">
-          <input class="todo-input" type="text" value="" />
-        </div>
-      </div>
-	/*]]>*/
-	</script>
-
-	<script type="text/template" id="stats-template" th:inline="javascript">
-	/*<![CDATA[*/
-      <% if (total) { %>
-        <span class="todo-count">
-          <span class="number"><%= remaining %></span>
-          <span class="word"><%= remaining == 1 ? 'item' : 'items' %></span> left.
-        </span>
-      <% } %>
-      <% if (done) { %>
-        <span class="todo-clear">
-          <a href="#">
-            Clear <span class="number-done"><%= done %></span>
-            completed <span class="word-done"><%= done == 1 ? 'item' : 'items' %></span>
-          </a>
-        </span>
-      <% } %>
-	/*]]>*/
-	</script>
 
   </body>
 
