--- a/src/main/webapp/WEB-INF/thymeleaf/vets/vetList.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/vets/vetList.html
@@ -52,7 +52,7 @@
         </tr>
         </thead>
         <tbody>
-            <tr th:each="vet : ${vets.vetList}">
+            <tr th:each="vet : ${vets.vets}">
                 <td th:text="|${vet.firstName} ${vet.lastName}|">[firstName lastName]</td>
                 <td>
                     <span th:remove="tag" th:each="specialty : ${vet.specialties}" th:text="${specialty.name}">
